add frontend, add auth tests and add some blog tests
