# routes/web.php
@@ -26,6 +26,9 @@ Route::get('/', function () {
     ]);
 });
 
+Route::get('/blogs/{id}', [BlogsController::class, 'view'])->name('blogs.view');
+
+
 Route::get('/dashboard', function () {
     return Inertia::render('Dashboard');
 })->middleware(['auth', 'verified'])->name('dashboard');
@@ -36,4 +39,4 @@ Route::middleware('auth')->group(function () {
     Route::delete('/profile', [ProfileController::class, 'destroy'])->name('profile.destroy');
 });
 
-require __DIR__.'/auth.php';
+require __DIR__ . '/auth.php';
